--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "del": "^5.1.0",
@@ -33,8 +34,8 @@
     "spassr": "^1.1.2"
   },
   "dependencies": {
-    "@rollup/plugin-replace": "^2.3.3",
     "@sveltech/routify": "^1.9.7",
+    "dotenv": "^8.2.0",
     "postcss-import": "^12.0.1",
     "svelte": "^3.23.2",
     "svelte-preprocess": "^4.0.8",
